Validate text length with JS to avoid cutting off pastes

--- a/src/pretalx/static/common/css/base.css
+++ b/src/pretalx/static/common/css/base.css
@@ -57,7 +57,8 @@ b,
 strong {
   font-weight: bolder;
 }
-small {
+small,
+.text-small {
   font-size: 80%;
 }
 p,
